--- a/CSS/adminStyling.css
+++ b/CSS/adminStyling.css
@@ -230,8 +230,8 @@ header {
     text-align: center;
 }
 
-.inputContainer {
-    width: 98%;
+.leftContainer {
+    width: 50%;
     margin: 0 auto;
     font-weight: bold;
     padding: 10px;
@@ -241,6 +241,39 @@ header {
     text-align: center;
     display: flex;
     flex-direction: column;
+}
+
+.rightContainer {
+    width: 50%;
+    padding-top: 60px;
+    display: flex;
+    flex-direction: column;
+}
+
+.divContainer {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+}
+
+.CoverPicture {
+    background-color: antiquewhite;
+    width: 250px;
+    height: 250px;
+    margin: 0;
+}
+
+.PNGPicture {
+    background-color: antiquewhite;
+    width: 250px;
+    height: 250px;
+    margin: 0;
+}
+
+.imgContainer {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
 }
 
 .columnContainer {
@@ -257,10 +290,11 @@ header {
 }
 
 .row {
-    margin-bottom: 5px;
+    margin-bottom: 15px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    width: 300px;
 }
 
 .column {
@@ -279,11 +313,22 @@ header {
 }
 
 .label-left {
-    margin-bottom: 10px;
+    margin-bottom: 3px;
+    margin-left: 10px;
     font-size: 16px;
 }
 
 input {
+    height: 30px;
+    font-size: 16px;
+    color: Navy;
+    border-radius: 20px;
+    padding-left: 10px;
+    border: 1px solid rgb(124, 124, 124);
+    width: 300px;
+}
+
+select {
     height: 30px;
     font-size: 16px;
     color: Navy;
@@ -343,8 +388,7 @@ input:hover {
 }
 
 #button {
-    margin-top: 20px;
-    width: 150px;
+    width: 200px;
     height: 30px;
     font-size: 16px;
     font-weight: bold;
@@ -352,6 +396,22 @@ input:hover {
     background-color: mediumturquoise;
     border: none;
     padding: 5px;
+}
+
+#buttonAdd {
+    width: 200px;
+    height: 30px;
+    font-size: 16px;
+    font-weight: bold;
+    color: #000000;
+    background-color: rgb(121, 121, 121);
+    border: none;
+    padding: 5px;
+}
+
+#buttonAdd:hover {
+    color: #9e9e9e;
+    background-color: rgb(47, 47, 47);
 }
 
 #button:hover {
