--- a/CSS/loginStyling.css
+++ b/CSS/loginStyling.css
@@ -16,7 +16,7 @@ main {
     flex: 1;
     position: relative;
     background: rgb(217, 217, 224);
-    box-shadow: 150px 2px 20px 10px rgb(139, 161, 182) inset;
+    box-shadow: 100px 2px 20px 10px rgb(139, 161, 182) inset;
 }
 
 .topnav {
@@ -30,6 +30,7 @@ main {
 }
 
 .title {
+    padding-left: 20px;
     font-size: 50px;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -46,6 +47,10 @@ main {
     margin-right: 10px;
 }
 
+.aIcon {
+    font-size: 24px;
+}
+
 .userIcon {
     margin-right: 10px;
     font-size: 25px;
@@ -59,7 +64,6 @@ main {
 
 a {
     margin: 0;
-    font-size: 24px;
     color: black;
     cursor: pointer;
     text-decoration-line: none;
@@ -79,11 +83,12 @@ a {
 }
 
 aside {
-   padding-left: 15px;
+    padding-top: 10px;
+   padding-left: 20px;
    cursor: pointer;
 }
 
-#allProds {
+#categories {
     font-family: Arial, Helvetica, sans-serif;
 }
 
