--- a/CSS/loginStyling.css
+++ b/CSS/loginStyling.css
@@ -75,7 +75,6 @@ a {
 
 .container {
     display: flex;
-    flex-wrap: wrap;
 }
 
 aside {
@@ -88,11 +87,26 @@ aside {
     font-size: 20px;
 }
 
-/* #categoryItems {
-    background-color: black;
-    width: 10em;
-    height: 10em;
-} */
+.allProducts {
+    width: 100vw;
+    height: 100vh;
+    padding: 1rem;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 1rem;
+    text-align: center;
+}
+
+.productBox {
+    color: black;
+    font-family: monospace;
+}
+
+.productPic {
+    height: 7em;
+    object-fit: contain;
+}
 
 .SubScribe {
     margin: 0;
