--- a/CSS/signupStyling.css
+++ b/CSS/signupStyling.css
@@ -4,6 +4,64 @@ body {
     box-sizing: border-box;
 }
 
+.topnav {
+    height: 50px;
+    background-color: rgb(188, 200, 218);
+    padding: 20px;
+    box-shadow: 2px 2px 20px 10px rgb(139, 161, 182) inset;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.title {
+    padding-left: 20px;
+    font-size: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#counter {
+    margin: 0;
+    margin-right: 5px;
+    color: black;
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.cartIcon {
+    margin-right: 10px;
+}
+
+.aIcon {
+    font-size: 24px;
+}
+
+.userIcon {
+    margin-right: 10px;
+    font-size: 25px;
+    margin-top: 2px;
+}
+
+#authentication {
+    display: flex;
+    align-items: center;
+}
+
+a {
+    margin: 0;
+    color: black;
+    cursor: pointer;
+    text-decoration-line: none;
+}
+
+.button {
+    cursor: pointer;
+    margin-left: 10px;
+    border-radius: 10px;
+    font-family: fantasy;
+    background-color: greenyellow;
+}
+
 .signUpForm {
     width: 300px;
     padding: 40px;
@@ -19,9 +77,10 @@ body {
 }
 
 #titleSignUp {
+    padding-top: 3em;
     text-align: center;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color: blue;
+    color: black;
 }
 
 .userFirstNlabel,
