Create New branch och accept all the edit

--- a/CSS/indexStyling.css
+++ b/CSS/indexStyling.css
@@ -1,7 +1,6 @@
 .box2 {
     padding: 30px;
     align-content: center;
-<<<<<<< Updated upstream:style.css
 }
 
 ul {
@@ -40,17 +39,12 @@ ul li ul li {
 
 ul li:hover ul li {
     display: block;
-=======
->>>>>>> Stashed changes:CSS/indexStyling.css
 }
 
 body {
     font-family: arial;
     color: black;
-<<<<<<< Updated upstream:style.css
     box-shadow: 15px 30px 25px red;
-=======
->>>>>>> Stashed changes:CSS/indexStyling.css
 }
 
 a {
@@ -77,7 +71,10 @@ img {
     box-shadow: 5px 10px #000000
 }
 
-.btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
+.btn-primary,
+.btn-primary:hover,
+.btn-primary:active,
+.btn-primary:visited {
     background-color: red !important;
     color: #000000 !important;
     border-color: black !important;
@@ -88,7 +85,10 @@ img {
     border: none;
 }
 
-.btn-secondary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
+.btn-secondary,
+.btn-primary:hover,
+.btn-primary:active,
+.btn-primary:visited {
     background-color: red !important;
     color: #000000 !important;
     border-color: black !important;
@@ -146,13 +146,10 @@ img {
     margin-bottom: 10px;
     margin-right: 10px;
     position: relative;
-<<<<<<< Updated upstream:style.css
-    left: bottom: 0;
+    /*left-bottom: 0;*/
     top: 70px;
-=======
     left: 0;
     top: 70px;
     align-content: center;
     align-items: center;
->>>>>>> Stashed changes:CSS/indexStyling.css
 }
