--- a/CSS/adminStyling.css
+++ b/CSS/adminStyling.css
@@ -6,62 +6,419 @@
 }
 
 body {
-    background-color: #4a4072;
+    background: url(../images/adminBackground.jpg);
+    background-size: cover;
 }
 
-#header {
+.logo {
+    font-size: 2em;
+    margin-left: 20px;
+    color: #fff;
+    font-weight: bold;
+    margin-top: 4px;
+    width: 20%;
+}
+
+#adminName {
+    width: 70%;
+    text-align: end;
+    color: #fff;
+    margin-top: 15px;
+}
+
+#logout {
+    width: 10%;
+    text-align: center;
+    color: #fff;
+    margin-top: 0px;
+    margin-left: 0;
+    font-size: 2.5em;
+    cursor: pointer;
+}
+
+#logout:hover {
+    color: rgb(255, 0, 0);
+}
+
+header {
     width: 98%;
     height: 50px;
     margin: 1%;
-    background-color: #7271da;
-    border-radius: 3px;
+    background-color: #3734d1;
+    border-radius: 5px;
+    position: fixed;
+    top: 0;
+    display: flex;
+    flex-direction: row;
 }
 
-#bodyLeft {
-    width: 24%;
-    height: 500px;
-    background-color: #4a4072;
+.bodyLeft {
+    width: 12%;
     margin: 10px;
     border-radius: 3px;
-    float: left;
+    padding: 5px;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
 }
 
-#bodyLeft h3 {
-    background-color: #4a4072;
-    color: #fff;
-    height: 40px;
-    line-height: 40px;
-    border-radius: 3px;
+.categoriesContainer:hover {
+    color: #3734d1;
+}
+
+.productsContainer:hover {
+    color: #3734d1;
+}
+
+.ordersContainer:hover {
+    color: #3734d1;
+}
+
+.usersContainer:hover {
+    color: #3734d1;
+}
+
+.mangeAdminContainer:hover {
+    color: #3734d1;
+}
+
+.container {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #fff;
+    border-radius: 10px;
+    padding: 5px;
+    font-weight: bold;
+    font-family: sans-serif;
+}
+
+.dashBoard {
+    background-color: #3734d1;
+    font-weight: bold;
+    font-size: 1.1em;
+    cursor: pointer;
     text-align: center;
 }
 
-#bodyLeft ul {
-    list-style-type: none;
-    margin-top: 10px;
+.subContainerHideShow {
+    display: none;
 }
 
-#bodyLeft ul li {
-    height: 30px;
-    line-height: 30px;
-    border-radius: 3px;
-}
-
-#bodyLeft ul li a {
+.add {
+    padding: 5px;
+    padding-left: 10px;
+    margin: 5px;
+    border-bottom: 1px solid #fff;
+    cursor: pointer;
     text-decoration: none;
-    color: #fff;
-    padding-left: 3%;
-    display: block;
 }
 
-#bodyLeft ul li:hover {
-    background-color: #221c3b;
+.add:hover {
+    border-bottom: 1px solid rgb(0, 140, 255);
+    text-decoration: none;
+    cursor: pointer;
 }
 
-#bodyRight {
-    width: 73%;
+.delUpp {
+    padding: 5px;
+    padding-left: 10px;
+    margin: 5px;
+    border-bottom: 1px solid #fff;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.delUpp:hover {
+    border-bottom: 1px solid rgb(0, 140, 255);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.mainContainer {
+    display: flex;
+    width: 100%;
+    margin-top: 80px;
+}
+
+#bdcCatAdd {
+    background-color: aqua;
+    width: 98%;
+    height: 480px;
+    margin: 10px;
+    padding: 10px;
+    display: none;
+}
+
+#bdcCatAdd {
+    background-color: aqua;
+    width: 98%;
+    height: 480px;
+    margin: 10px;
+    padding: 10px;
+    display: none;
+}
+
+#bdcCatAdd {
+    background-color: aqua;
+    width: 98%;
+    height: 480px;
+    margin: 10px;
+    padding: 10px;
+    display: none;
+}
+
+.bodyRight {
+    width: 84.5%;
     height: 500px;
     background-color: #cccccc;
     margin: 10px;
-    border-radius: 3px;
-    float: left;
+    border-radius: 5px;
+    opacity: 80%;
+    display: flex;
+    flex-direction: column;
+}
+
+.message {
+    width: 95%;
+    height: 30px;
+    padding-top: 3px;
+    margin: 0 auto;
+    margin-top: 10px;
+    color: #3734d1;
+    font-weight: bold;
+    text-align: center;
+    background-color: silver;
+    border-radius: 5px;
+    display: none;
+}
+
+.bodyRightContainer {
+    width: 95%;
+    padding-top: 3px;
+    margin: 0 auto;
+    margin-top: 10px;
+    color: #3734d1;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+}
+
+.bdc {
+    width: 98%;
+    height: 400px;
+    margin: 10px;
+    margin-top: 0px;
+    color: #000000;
+    border-radius: 5px;
+    display: flex;
+    /*background-color: sienna;*/
+    font-size: 3em;
+    display: flex;
+    flex-direction: column;
+    display: none;
+}
+
+.addText {
+    border-bottom: 1px solid #000000;
+    width: 98%;
+    margin: 0 auto;
+    font-weight: bold;
+    padding: 10px;
+    height: 40px;
+    font-size: 18px;
+    text-align: center;
+}
+
+.leftContainer {
+    width: 50%;
+    margin: 0 auto;
+    font-weight: bold;
+    padding: 10px;
+    margin: 5px;
+    height: 400px;
+    font-size: 14px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.rightContainer {
+    width: 50%;
+    padding-top: 60px;
+    display: flex;
+    flex-direction: column;
+}
+
+.divContainer {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+}
+
+.CoverPicture {
+    background-color: antiquewhite;
+    width: 250px;
+    height: 250px;
+    margin: 0;
+}
+
+.PNGPicture {
+    background-color: antiquewhite;
+    width: 250px;
+    height: 250px;
+    margin: 0;
+}
+
+.imgContainer {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+.columnContainer {
+    width: 98%;
+    margin: 0 auto;
+    font-weight: bold;
+    padding: 10px;
+    margin: 5px;
+    height: 400px;
+    font-size: 14px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.row {
+    margin-bottom: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 300px;
+}
+
+.column {
+    margin-bottom: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: left;
+}
+
+.rowButton {
+    margin-bottom: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.label-left {
+    margin-bottom: 3px;
+    margin-left: 10px;
+    font-size: 16px;
+}
+
+input {
+    height: 30px;
+    font-size: 16px;
+    color: Navy;
+    border-radius: 20px;
+    padding-left: 10px;
+    border: 1px solid rgb(124, 124, 124);
+    width: 300px;
+}
+
+select {
+    height: 30px;
+    font-size: 16px;
+    color: Navy;
+    border-radius: 20px;
+    padding-left: 10px;
+    border: 1px solid rgb(124, 124, 124);
+    width: 300px;
+}
+
+.ColumnSubText {
+    height: 30px;
+    color: Navy;
+    padding-left: 10px;
+    width: 200px;
+    padding-top: 5px;
+    text-align: left;
+}
+
+.columnMainText {
+    height: 30px;
+    color: rgb(0, 0, 0);
+    padding-left: 10px;
+    width: 200px;
+    text-align: left;
+}
+
+.inputContainer {
+    margin-top: 10px;
+}
+
+.columnSub {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: cornsilk;
+}
+
+.columnSub:hover {
+    background-color: rgb(194, 188, 166);
+}
+
+.Update {
+    color: darkgreen;
+    width: 80px;
+    cursor: pointer;
+}
+
+.Delete {
+    color: red;
+    width: 80px;
+    cursor: pointer;
+}
+
+.columnMain {
+    display: flex;
+    flex-direction: row;
+}
+
+input:hover {
+    background-color: rgb(187, 187, 251);
+}
+
+#button {
+    width: 200px;
+    height: 30px;
+    font-size: 16px;
+    font-weight: bold;
+    color: #000000;
+    background-color: mediumturquoise;
+    border: none;
+    padding: 5px;
+}
+
+#buttonAdd {
+    width: 200px;
+    height: 30px;
+    font-size: 16px;
+    font-weight: bold;
+    color: #000000;
+    background-color: rgb(121, 121, 121);
+    border: none;
+    padding: 5px;
+}
+
+#buttonAdd:hover {
+    color: #9e9e9e;
+    background-color: rgb(47, 47, 47);
+}
+
+#button:hover {
+    background-color: rgb(0, 119, 115);
+    color: #fff;
 }
