--- a/CSS/signupStyling.css
+++ b/CSS/signupStyling.css
@@ -1,5 +1,4 @@
-
-body{
+body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -63,54 +62,56 @@ a {
     background-color: greenyellow;
 }
 
-.signUpForm{
-    
+.signUpForm {
     width: 300px;
     padding: 40px;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     background: lightblue;
-    box-shadow:  5px 5px 5px 5px #888888;
+    box-shadow: 5px 5px 5px 5px #888888;
     text-align: center;
-    cursor:pointer;
-    transition:.5s ease;
-
+    cursor: pointer;
+    transition: .5s ease;
 }
-#titleSignUp{
+
+#titleSignUp {
     padding-top: 3em;
     text-align: center;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     color: black;
-    
 }
-.userFirstNlabel, .userFirstNInput, .userLastNlabel, .userLastNInput,
- .userEmaillabel, .userPwdlabel , .userPwdInput{
-   
+
+.userFirstNlabel,
+.userFirstNInput,
+.userLastNlabel,
+.userLastNInput,
+.userEmaillabel,
+.userPwdlabel,
+.userPwdInput {
     border: none;
-   
     padding: 5px 3px;
-   /*  text-align: center; */
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    
-}
-.userEmailInput{
-    border: none;
-   
-    padding: 5px 3px;
-   /*  text-align: center; */
+    /*  text-align: center; */
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
 }
-.userSignup{
+
+.userEmailInput {
+    border: none;
+    padding: 5px 3px;
+    /*  text-align: center; */
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+.userSignup {
     border: none;
     color: white;
     padding: 5px 3px;
@@ -121,16 +122,16 @@ a {
     margin: 4px 2px;
     cursor: pointer;
 }
-#crossReg{
+
+#crossReg {
     top: 1px;
     right: 1px;
     float: right;
 }
+
 @media only screen and (max-width: 400px) {
-    
-.signUpForm{
-    
-    width: 250px;
-    padding: 10px;
-  }
+    .signUpForm {
+        width: 250px;
+        padding: 10px;
+    }
 }
