shows both allproducts and products in each cat

--- a/CSS/loginStyling.css
+++ b/CSS/loginStyling.css
@@ -98,6 +98,16 @@ aside {
     text-align: center;
 }
 
+.categoryClass {
+    width: 70vw;
+    height: 100vh;
+    padding: 1rem;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+}
+
 .productBox {
     color: black;
     font-family: monospace;
