--- a/CSS/loginStyling.css
+++ b/CSS/loginStyling.css
@@ -3,30 +3,37 @@
 }
 
 body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
     margin: 0;
-    flex-wrap: wrap;
+    overflow-x: hidden;
+    padding: 0;
+    display: flex;
+    
 }
 
 main {
     display: flex;
     justify-content: space-between;
-    flex: 1;
-    position: relative;
+    flex-wrap: wrap;
     background: rgb(217, 217, 224);
-    box-shadow: 100px 2px 20px 10px rgb(139, 161, 182) inset;
+    box-shadow: 100px 2px 20px 10px rgb(94, 96, 97) inset;
+    margin: 0 auto;
+    padding: 0 1.5em;
+    padding-top: 95px;
+    padding-bottom: 20px;
+    top: 80px;
 }
 
 .topnav {
-    height: 50px;
-    background-color: rgb(188, 200, 218);
-    padding: 40px;
-    box-shadow: 2px 2px 20px 10px rgb(139, 161, 182) inset;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background-color: rgb(70, 189, 197);
+    padding: 40px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, .5);   
+    z-index: 1;
+    position: fixed;
+    height: 50px;
+    width: 100%;
 }
 
 .title {
@@ -35,17 +42,33 @@ main {
 }
 
 #counter {
-    margin: 0;
-    margin-right: 5px;
-    color: black;
-    font-size: 30px;
-    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    justify-content: center;
+    font-size: 1em;
+    margin-top: -30px;
+    margin-right: -30px;
+    background-color: white;
+    border-radius: 30px;
+    width: 1.2em;
+    top:18px;
+    text-align: center;
 }
 
 .cartIcon {
+    display: flex;
     margin-right: 10px;
     font-size: 24px;
+    top: 11px;
 }
+
+.cartIcon {
+   /*  display: flex; */
+    margin-right: 10px;
+    font-size: 24px;
+    top: 11px;
+}
+
+
 
 .userIcon {
     margin-right: 10px;
@@ -55,7 +78,10 @@ main {
 
 #authentication {
     display: flex;
+    justify-content: center;
     align-items: center;
+    top: 10px;
+    flex-wrap: wrap;
 }
 
 a {
@@ -68,13 +94,30 @@ a {
 .button {
     cursor: pointer;
     margin-left: 10px;
-    border-radius: 10px;
+    border-radius: 5px;
     font-family: fantasy;
-    background-color: greenyellow;
+    background-color: cyan;
+    margin: 4px 2px;
+    padding: 2px 10px;
 }
 
 .container {
     display: flex;
+    flex-grow: 1;
+}
+
+.shopBtn {
+    cursor: pointer;
+    margin-left: 10px;
+    border-radius: 5px;
+    font-family: fantasy;    
+    font-size: 20px;
+    background-color: cyan;
+    position: absolute;
+    right: 10px;
+    bottom: 8px;
+    margin: 4px 2px;
+    padding: 10px 20px;
 }
 
 aside {
@@ -85,52 +128,93 @@ aside {
 #categories {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
+    position: fixed;
+  /*   display: flex; */
+   /*  justify-content: center;   */
+    flex-direction: column; 
+    width: 100%;
+    max-width: 100px;
+    top:80px;
+    flex:4 1 0%;
+
 }
 
 .allProducts {
-    width: 100vw;
-    height: 100vh;
-    padding: 1rem;
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 1rem;
-    text-align: center;
-}
-
-.categoryClass {
-    width: 70vw;
-    height: 100vh;
-    padding: 1rem;
-    display: grid;
-    grid-template-rows: 1fr;
-    grid-template-columns: 1fr 1fr;
-    text-align: center;
+    display: flex;
+   /*  justify-content: center;
+    align-items: center;    */
+    flex-wrap: wrap;
+    padding: 1rem;    
+   /*  width: 100vw;  */
+    text-align: center;   
+    left:230px;
+    flex:1 1 0%;
+    order:-1;
 }
 
 .productBox {
-    color: black;
-    font-family: monospace;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    margin-bottom: 20px;
+    margin-right: 30px;
+    padding: 20px;
+    border-radius: 0.6em;
+    width: 800px;
+    height: 250px;
+    opacity: 0.9;
 }
-
+.prodName {
+     position: absolute;
+     top: 8px;
+     right: 8px;
+     font-weight: bold;
+   }
 .productPic {
-    height: 7em;
+    position: absolute;
+    display: flex;
+    height: 12em;
     object-fit: contain;
+    top: 40px;
+    left: 2px
 }
-
-.SubScribe {
+.productPris {
+    position: absolute;
+    right: 20px;
+    bottom: 80px;
+}
+.prodDescb {
+    display: flex;
+    position: absolute;
+    top: 45px;
+    left: 300px;
+    word-wrap: break-word;
+    text-align: justify;
+    margin: 6px;
+ }
+.SubScribe {        
     margin: 0;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
 }
 
 .footer {
-    background-color: rgb(102, 123, 132);
-    box-shadow: 2px 2px 20px 10px rgb(139, 161, 182) inset;
+    background-color: rgb(70, 189, 197);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
     padding: 20px;
     display: flex;
+    height: 80px;
     justify-content: space-between;
     align-items: center;
     margin: 0;
     font-weight: bold;
     font-family: cursive;
     color: greenyellow;
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
 }
