--- a/CSS/mypagesStyling.css
+++ b/CSS/mypagesStyling.css
@@ -8,16 +8,13 @@ body {
     max-width: 100vw;
     flex-direction: column;
     margin: 0;
-    flex-wrap: wrap;
 }
 
 main {
     max-width: 100vw;
     max-height: 100vh;
-    display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex: 1;
-    position: relative;
     background: rgb(217, 217, 224);
     box-shadow: 100px 2px 20px 10px rgb(139, 161, 182) inset;
 }
@@ -34,15 +31,18 @@ main {
 }
 
 .title {
+    margin: 0;
     font-size: 50px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .userIcon {
-    margin-right: 10px;
     font-size: 25px;
-    margin-top: 2px;
     display: flex;
+}
+
+.myPages {
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #authentication {
@@ -58,32 +58,34 @@ a {
 }
 
 p {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: monospace;
     padding-left: 10px;
     margin: 0;
 }
 
 #orderContainer {
     width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-wrap: wrap;
+    height: 20%;
+    padding-left: 8em;
 }
 
 #orders {
     font-family: monospace;
-    font-size: 20px;
-    padding-left: 7em;
-    padding-top: 20px;
 }
 
 #allProducts {
-    max-width: 50vw;
-    max-height: 50vh;
+    max-width: 100vw;
+    max-height: 100vh;
+    display: flex;
+    flex-wrap: wrap;
     text-align: center;
+    justify-content: center;
+    padding-top: 5em;
 }
 
 .productBox {
+    width: 20em;
+    height: 10em;
     color: black;
     font-family: monospace;
 }
@@ -95,21 +97,98 @@ p {
 
 #adminContainer {
     width: 100vw;
+    display: flex;
+    justify-content: center;
+}
+
+#totalPrice {
+    font-family: monospace;
+    font-size: 2em;
+    margin: 0;
+    padding: 0;
 }
 
 #recivedOrders {
-    display: flex;
-    padding-left: 8em;
-}
-
-.text {
-    font-family: monospace;
-    font-size: 15px;
+   display: flex;
+   flex-direction: row;
 }
 
 h3 {
     margin: 0;
     font-family: monospace;
     font-size: 15px;
-    padding-left: 10em;
+}
+
+@media screen and (max-width: 700px) and (min-width:400px) {
+    
+    main {
+        box-shadow: 0px 0px 20px 10px rgb(139, 161, 182) inset;
+    }
+
+    .topnav {
+        padding: 10px;
+    }
+
+    .title {
+        font-size: 25px;
+    }
+
+    #orderContainer {
+       padding: 30px;
+    }
+
+    #orders {
+        font-size: 20px;
+        margin: 0;
+    }
+
+    #totalPrice {
+        font-size: 15px;
+        padding-bottom: 10px;
+    }
+
+    #recivedOrders {
+        padding: 10px;
+    }
+
+    #allProducts {
+        padding: 10px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+
+    main {
+        box-shadow: 0px 0px 20px 10px rgb(139, 161, 182) inset;
+    }
+
+    .topnav {
+        padding: 10px;
+    }
+
+    .title {
+        font-size: 25px;
+    }
+
+    #orderContainer {
+       padding: 30px;
+    }
+
+    #orders {
+        font-size: 20px;
+        margin: 0;
+    }
+
+    #totalPrice {
+        font-size: 15px;
+        padding-bottom: 10px;
+    }
+
+    #recivedOrders {
+        padding: 10px;
+    }
+
+    #allProducts {
+        padding: 10px;
+    }
 }
