--- a/CSS/loginStyling.css
+++ b/CSS/loginStyling.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Bowlby+One+SC');
 * {
     box-sizing: border-box;
 }
@@ -14,31 +15,35 @@ main {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    background: rgb(217, 217, 224);
+    background:#001F3F;
     box-shadow: 100px 2px 20px 10px rgb(94, 96, 97) inset;
     margin: 0 auto;
     padding: 0 1.5em;
     padding-top: 95px;
     padding-bottom: 20px;
     top: 80px;
+    color: #FFF;
 }
 
 .topnav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: rgb(70, 189, 197);
+  /*   background-color: rgb(70, 189, 197); */
+    background-color: #00389d;
     padding: 40px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, .5);   
     z-index: 1;
     position: fixed;
     height: 50px;
     width: 100%;
+    color: #FFF;
 }
 
 .title {
     font-size: 50px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:  'Bowlby One SC', cursive;
+    color: #FFF;
 }
 
 #counter {
@@ -52,6 +57,7 @@ main {
     width: 1.2em;
     top:18px;
     text-align: center;
+    color: #001F3F;
 }
 
 .cartIcon {
@@ -59,21 +65,14 @@ main {
     margin-right: 10px;
     font-size: 24px;
     top: 11px;
+   
 }
-
-.cartIcon {
-   /*  display: flex; */
-    margin-right: 10px;
-    font-size: 24px;
-    top: 11px;
-}
-
-
 
 .userIcon {
     margin-right: 10px;
     font-size: 25px;
     margin-top: 2px;
+   
 }
 
 #authentication {
@@ -86,7 +85,7 @@ main {
 
 a {
     margin: 0;
-    color: black;
+    color: #FFF;
     cursor: pointer;
     text-decoration-line: none;
 }
@@ -103,7 +102,7 @@ a {
 
 .container {
     display: flex;
-    flex-grow: 1;
+
 }
 
 .shopBtn {
@@ -118,6 +117,7 @@ a {
     bottom: 8px;
     margin: 4px 2px;
     padding: 10px 20px;
+    color: #001F3F;
 }
 
 aside {
@@ -129,6 +129,7 @@ aside {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     position: fixed;
+    color: #FFF;
   /*   display: flex; */
    /*  justify-content: center;   */
     flex-direction: column; 
@@ -141,15 +142,16 @@ aside {
 
 .allProducts {
     display: flex;
-   /*  justify-content: center;
-    align-items: center;    */
+    justify-content: center;
+    align-items: center;    
     flex-wrap: wrap;
     padding: 1rem;    
-   /*  width: 100vw;  */
+     width: 100vw;  
     text-align: center;   
     left:230px;
     flex:1 1 0%;
     order:-1;
+    left:200px;
 }
 
 .productBox {
@@ -157,6 +159,7 @@ aside {
     display: flex;
     justify-content: center;
     align-content: center;
+    flex-wrap: wrap;
     margin-bottom: 20px;
     margin-right: 30px;
     padding: 20px;
@@ -173,6 +176,7 @@ aside {
    }
 .productPic {
     position: absolute;
+    
     display: flex;
     height: 12em;
     object-fit: contain;
@@ -202,7 +206,7 @@ aside {
 }
 
 .footer {
-    background-color: rgb(70, 189, 197);
+    background-color: #00389d;
     box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
     padding: 20px;
     display: flex;
@@ -212,9 +216,205 @@ aside {
     margin: 0;
     font-weight: bold;
     font-family: cursive;
-    color: greenyellow;
+    color: #FFF;
     position: fixed;
     bottom: 0px;
     left: 0px;
     width: 100%;
+}
+
+@media only screen and (max-width: 1050px) {
+    .allProducts{
+        margin: 80px;
+        display: flex;
+        justify-content: center;
+       align-items: center;    
+       flex-wrap: wrap;
+       padding: 1rem;    
+        width: 100vw;  
+       text-align: center;   
+       left:230px;
+       flex:1 1 0%;
+       order:-1;
+       left:200px;
+    }
+    .prodName {         
+        position: absolute;
+        top: 7px;
+        right: 200px;
+        font-size: 16px;
+        display: flex;
+        justify-content: flex-start;
+      }
+      .productPic {
+        position: absolute;
+        display: flex;
+        height: 9em;     
+        object-fit: contain;
+        top: 18px;
+        left: 2px
+    }
+    .productPris {     
+        position: absolute;
+        display: flex;
+        right: 300px;
+        bottom: 30px;
+        font-size: 17px;
+    }
+    .shopBtn {
+        cursor: pointer;
+        margin-left: 10px;
+        border-radius: 5px;
+        font-family: fantasy;    
+        font-size: 20px;
+        background-color: cyan;
+        position: absolute;
+        right: 200px;
+        bottom: 25px;
+        margin: 4px 2px;
+        padding: 10px 10px;
+    }
+    .prodDescb{
+     /*    left: 120px;
+        right:100px; */
+        font-size: 15px;
+        left: 150px;
+        right:90px;
+    }
+    .topnav {
+        display: flex;       
+        justify-content: space-between;
+        align-items: center;       
+        background-color: #00389d;
+        padding: 40px;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, .5);   
+        z-index: 1;
+        position: fixed;
+        height: 50px;
+        width: 100%;
+      
+    }
+    
+/* .cartIcon {
+    display: flex;
+    margin-right: 10px;
+    font-size: 24px;
+    top: 11px;
+   left: 800px;
+}
+    #authentication {
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        top: 10px;
+      
+        flex-wrap: wrap;
+    } */
+    
+}
+@media only screen and (max-width: 500px) {
+    .title {
+        font-size: 40px;
+        margin: 12px;
+        top:10px;            
+        font-family:  'Bowlby One SC', cursive;
+    }
+    .topnav {
+        display: flex;       
+        justify-content: flex-start;
+        align-items: center;       
+        background-color: #00389d;
+        padding: 30px;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, .5);   
+        z-index: 1;
+        position: fixed;
+        height: 100px;
+        width: 100%;
+
+    }
+    #categories {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 20px;
+        position: fixed;
+        flex-direction: column; 
+        width: 100%;
+        top:100px;
+        left: 60px;
+        flex:4 1 0%;
+    
+    }
+    .allProducts{
+        margin: 100px;
+    }
+    .prodDescb{
+        font-size: 10px;
+        left: 150px;
+        right:20px;
+    }
+    .productBox {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        flex-wrap: wrap;
+        margin-bottom: 35px;
+        margin-right: 30px;      
+        border-radius: 0.6em;
+        width: 400px;
+        height: 150px;
+        opacity: 0.9;
+    }
+    .prodName {         
+        position: absolute;
+        top: 7px;
+        left: 0px;
+        font-size: 10px;
+        display: flex;
+        justify-content: flex-start;
+      }
+      .productPic {
+        position: absolute;
+        display: flex;
+        height: 9em;     
+        object-fit: contain;
+        top: 18px;
+        left: 2px
+    }
+    .productPris {     
+        position: absolute;
+        display: flex;
+        left: 1px;
+        bottom: -25px;
+        font-size: 10px;
+    }
+    .shopBtn {
+        cursor: pointer;
+        margin-left: 10px;
+        border-radius: 5px;
+        font-family: fantasy;    
+        font-size: 15px;
+        background-color: cyan;
+        position: absolute;
+        right:  80px;
+        bottom: -35px;
+        margin: 4px 2px;
+        padding: 1px 2px;
+    }
+    #authentication {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        top: 10px;    
+        padding: 5px;
+        margin: 10px;
+        
+    }
+    .button {
+        cursor: pointer;
+        margin-left: 1px;
+        border-radius: 5px; 
+        margin: 4px 40px;
+        padding: 4px 30px;
+    }
+    
 }
