--- a/CSS/signupStyling.css
+++ b/CSS/signupStyling.css
@@ -1,23 +1,41 @@
+@import url('https://fonts.googleapis.com/css?family=Bowlby+One+SC');
 body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow: hidden;
 }
-
-.topnav {
-    height: 50px;
-    background-color: rgb(188, 200, 218);
-    padding: 20px;
-    box-shadow: 2px 2px 20px 10px rgb(139, 161, 182) inset;
+main {
     display: flex;
-    align-items: center;
+    justify-content: center;  
+    flex-wrap: wrap;
+    background:#001F3F;
+    box-shadow: 100px 2px 20px 10px rgb(94, 96, 97) inset;
+    margin: 0 auto;
+    padding: 0 1.5em;
+    padding-top: 15px;
+    top: 10px;
+    color: #FFF;
+    height: 100vw;
+   
+}
+.topnav {
+    background-color: #00389d;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
+    padding: 25px;
+    color: #FFF;
+    display: flex;
     justify-content: space-between;
+    align-items: center;
+    z-index: 1;
+    height: 30px;
+    width: 100%;
 }
 
 .title {
-    padding-left: 20px;
     font-size: 50px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:  'Bowlby One SC', cursive;
+    color: #FFF;
 }
 
 #counter {
@@ -66,21 +84,22 @@ a {
     width: 300px;
     padding: 40px;
     position: absolute;
-    top: 50%;
+    top: 65%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    background: lightblue;
-    box-shadow: 5px 5px 5px 5px #888888;
+    transform: translate(-50%, -50%);   
+    box-shadow: 1px 1px 1px 1px #888888;
     text-align: center;
     cursor: pointer;
     transition: .5s ease;
+    z-index: 1;
 }
 
 #titleSignUp {
-    padding-top: 3em;
+    padding-top: 1em;
     text-align: center;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color: black;
+    color: #FFF;
+    margin-right: 30px;
 }
 
 .userFirstNlabel,
@@ -92,7 +111,6 @@ a {
 .userPwdInput {
     border: none;
     padding: 5px 3px;
-    /*  text-align: center; */
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
@@ -103,7 +121,6 @@ a {
 .userEmailInput {
     border: none;
     padding: 5px 3px;
-    /*  text-align: center; */
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
@@ -127,11 +144,30 @@ a {
     top: 1px;
     right: 1px;
     float: right;
+    color: #FFF;
 }
+#signUpSubmit{
+    cursor: pointer;
+    margin-left: 10px;
+    border-radius: 5px;
+    font-family: fantasy;
+    background-color: cyan;
+    margin: 4px 2px;
+    padding: 2px 10px;
+}
+@media only screen and (max-width: 500px) {
 
-@media only screen and (max-width: 400px) {
     .signUpForm {
-        width: 250px;
-        padding: 10px;
+        width: 300px;
+        padding: 20px;
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);   
+        box-shadow: 1px 1px 1px 1px #888888;
+        text-align: center;
+        cursor: pointer;
+        transition: .5s ease;
+        z-index: 1;
     }
 }
