--- a/CSS/cartStyling.css
+++ b/CSS/cartStyling.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Bowlby+One+SC');
 * {
     box-sizing: border-box;
     margin: 0px;
@@ -50,16 +51,24 @@ main {
 }
 
 #counter {
-    margin: 0;
-    margin-right: 5px;
-    color: black;
-    font-size: 30px;
-    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    justify-content: center;
+    font-size: 1em;
+    margin-top: -30px;
+    margin-right: -30px;
+    background-color: white;
+    border-radius: 30px;
+    width: 1.2em;
+    top:18px;
+    text-align: center;
+    color: #001F3F;
 }
 
 .cartIcon {
+    display: flex;
     margin-right: 10px;
     font-size: 24px;
+    top: 11px;
 }
 
 .userIcon {
@@ -70,13 +79,16 @@ main {
 
 #authentication {
     display: flex;
+    justify-content: center;
     align-items: center;
+    top: 10px;
+    flex-wrap: wrap;
     
 }
 
 a {
     margin: 0;
-    color: black;
+    color: #FFF;
     cursor: pointer;
     text-decoration-line: none;
 }
@@ -84,7 +96,7 @@ a {
 .button {
     cursor: pointer;
     margin-left: 10px;
-    border-radius: 10px;
+    border-radius: 5px;
     font-family: fantasy;
     background-color:cyan;
 }
