--- a/CSS/mypagesStyling.css
+++ b/CSS/mypagesStyling.css
@@ -50,7 +50,6 @@ a {
 
 main {
     max-width: 100vw;
-    max-height: 100vh;
     justify-content: center;
     flex: 1;
     background: rgb(217, 217, 224);
@@ -59,25 +58,44 @@ main {
 
 p {
     font-family: monospace;
-    padding-left: 10px;
     margin: 0;
 }
 
-#orderContainer {
+#ordersContainer {
     width: 100vw;
     height: 20%;
     padding-left: 8em;
 }
 
-#orders {
+h1 {
     font-family: monospace;
 }
 
-#totalPrice {
+.totalPrice {
     font-family: monospace;
     font-size: 2em;
     margin: 0;
     padding: 0;
+}
+
+.button {
+    cursor: pointer;
+    margin-left: 10px;
+    border-radius: 5px;
+    font-family: fantasy;
+    background-color: cyan;
+    margin: 4px 2px;
+    padding: 2px 10px;
+}
+
+.orderBox {
+    width: 100vw;
+    background-color: whitesmoke;
+    margin-bottom: 10px;
+}
+
+.generalInfo {
+    background-color: turquoise;
 }
 
 #receivedOrders {
