--- a/CSS/cartStyling.css
+++ b/CSS/cartStyling.css
@@ -101,6 +101,16 @@ a {
     background-color:cyan;
 }
 
+#signOut {
+    cursor: pointer;
+    margin-left: 10px;
+    border-radius: 5px;
+    font-family: fantasy;
+    background-color: cyan;
+    margin: 4px 2px;
+    padding: 2px 10px;
+}
+
 #cartProducts {
     width: 100vw;
     margin: 10px;
