--- a/CSS/mypagesStyling.css
+++ b/CSS/mypagesStyling.css
@@ -36,6 +36,16 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+#signOut {
+    cursor: pointer;
+    margin-left: 10px;
+    border-radius: 5px;
+    font-family: fantasy;
+    background-color: cyan;
+    margin: 4px 2px;
+    padding: 2px 10px;
+}
+
 #authentication {
     display: flex;
     align-items: center;
