--- a/CSS/cartStyling.css
+++ b/CSS/cartStyling.css
@@ -28,20 +28,21 @@ main {
     padding-top: 95px;
     padding-bottom: 20px;
     top: 80px;
-    
+    color: #FFF;
 }
 
 .topnav {
-    background-color: #00389d;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
-    padding: 40px;
-    color: #FFF;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
+    background-color: #00389d;
+    padding: 40px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, .5);   
     z-index: 1;
+    position: fixed;
     height: 50px;
     width: 100%;
+    color: #FFF;
 }
 
 .title {
@@ -54,21 +55,23 @@ main {
     display: flex;
     justify-content: center;
     font-size: 1em;
-    margin-top: -30px;
-    margin-right: -30px;
+    margin-top: -40px;
+    margin-right: -900px;
     background-color: white;
     border-radius: 30px;
     width: 1.2em;
     top:18px;
     text-align: center;
     color: #001F3F;
+  
 }
 
 .cartIcon {
     display: flex;
-    margin-right: 10px;
+    margin-right: 50px;
     font-size: 24px;
-    top: 11px;
+    top: 13px;
+  
 }
 
 .userIcon {
@@ -104,7 +107,7 @@ a {
 #signOut {
     cursor: pointer;
     margin-left: 10px;
-    border-radius: 5px;
+    border-radius: 5px; 
     font-family: fantasy;
     background-color: cyan;
     margin: 4px 2px;
@@ -121,14 +124,16 @@ a {
 }
 
 .productBox {
-    color: black;
+    color: #FFF;
     font-family: monospace;
     padding-left: 8em;
+    font-weight: bold;
 }
 
 .productPic {
     height: 7em;
     object-fit: contain;
+    
 }
 
 #checkBox {
@@ -152,7 +157,7 @@ a {
 }
 
 .buyText {
-    font-size: 4em;
+    font-size: 3em;
     font-family: monospace;
     padding-left: 15px;
 }
