--- a/CSS/mypagesStyling.css
+++ b/CSS/mypagesStyling.css
@@ -1,39 +1,51 @@
+@import url('https://fonts.googleapis.com/css?family=Bowlby+One+SC');
+
 * {
     box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
 }
 
 body {
     display: flex;
     min-height: 100vh;
-    max-width: 100vw;
     flex-direction: column;
     margin: 0;
+    flex-wrap: wrap;
+    
 }
 
 .topnav {
-    height: 50px;
-    width: 100wv;
-    background-color: rgb(188, 200, 218);
-    padding: 40px;
-    box-shadow: 2px 2px 20px 10px rgb(139, 161, 182) inset;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background-color: #00389d;
+    padding: 40px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, .5);   
+    z-index: 1;
+    position: fixed;
+    height: 50px;
+    width: 100%;
+    color: #FFF;
 }
 
 .title {
-    margin: 0;
     font-size: 50px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:  'Bowlby One SC', cursive;
+    color: #FFF;
 }
 
 .userIcon {
+    margin-right: 10px;
     font-size: 25px;
+    margin-top: 2px;
     display: flex;
+   
 }
 
 .myPages {
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
 }
 
 #signOut {
@@ -48,22 +60,34 @@ body {
 
 #authentication {
     display: flex;
+    justify-content: center;
     align-items: center;
+    top: 10px;
+    flex-wrap: wrap;
 }
 
 a {
     margin: 0;
-    color: black;
+    color: #FFF;
     cursor: pointer;
     text-decoration-line: none;
 }
 
 main {
-    max-width: 100vw;
-    justify-content: center;
+    display: flex;
+    justify-content: space-between;
+    width: auto;
+    flex-wrap: wrap;
+    text-align: center;
     flex: 1;
-    background: rgb(217, 217, 224);
-    box-shadow: 100px 2px 20px 10px rgb(139, 161, 182) inset;
+    background: #001F3F;
+    box-shadow: rgb(94, 96, 97) 100px 2px 20px 10px inset;
+    margin: 0 auto;
+    padding: 0 1.5em;
+    padding-top: 95px;
+    padding-bottom: 20px;
+    top: 80px;
+    color: #FFF;
 }
 
 p {
