--- a/CSS/startStyling.css
+++ b/CSS/startStyling.css
@@ -8,14 +8,13 @@ body {
     overflow-x: hidden;
     padding: 0;
     display: flex;
-    
 }
 
 main {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    background:#001F3F;
+    background: #001F3F;
     box-shadow: 100px 2px 20px 10px rgb(94, 96, 97) inset;
     margin: 0 auto;
     padding: 0 1.5em;
@@ -31,7 +30,7 @@ main {
     justify-content: space-between;
     background-color: #00389d;
     padding: 40px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, .5);   
+    box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
     z-index: 1;
     position: fixed;
     height: 50px;
@@ -41,45 +40,42 @@ main {
 
 .title {
     font-size: 50px;
-    font-family:  'Bowlby One SC', cursive;
+    font-family: 'Bowlby One SC', cursive;
     color: #FFF;
 }
 
-#counter {
+.cartBox {
     display: flex;
-    justify-content: center;
-    font-size: 1em;
-    margin-top: -30px;
-    margin-right: -200px;
+}
+
+#counter {
     background-color: white;
     border-radius: 30px;
     width: 1.2em;
-    top:18px;
+    height: 1.2em;
     text-align: center;
     color: #001F3F;
+    margin: 0;
+    margin-left: 3px;
 }
 
 .cartIcon {
     display: flex;
-    margin-right: -100px;
     font-size: 24px;
-    top: 11px;
-   
 }
 
 .userIcon {
     margin-right: 10px;
     font-size: 25px;
     margin-top: 2px;
-   
 }
 
 #authentication {
-    display: flex;
+    /* display: flex;
     justify-content: center;
     align-items: center;
     top: 10px;
-    flex-wrap: wrap;
+    flex-wrap: wrap; */
 }
 
 a {
@@ -111,14 +107,13 @@ a {
 
 .container {
     display: flex;
-
 }
 
 .shopBtn {
     cursor: pointer;
     margin-left: 10px;
     border-radius: 5px;
-    font-family: fantasy;    
+    font-family: fantasy;
     font-size: 20px;
     background-color: cyan;
     position: absolute;
@@ -130,8 +125,8 @@ a {
 }
 
 aside {
-   padding-left: 20px;
-   cursor: pointer;
+    padding-left: 20px;
+    cursor: pointer;
 }
 
 #categories {
@@ -139,28 +134,27 @@ aside {
     font-size: 20px;
     position: fixed;
     color: #FFF;
-  /*   display: flex; */
-   /*  justify-content: center;   */
-    flex-direction: column; 
+    /*   display: flex; */
+    /*  justify-content: center;   */
+    flex-direction: column;
     width: 100%;
     max-width: 100px;
-    top:80px;
-    flex:4 1 0%;
-
+    top: 80px;
+    flex: 4 1 0%;
 }
 
 .allProducts {
     display: flex;
     justify-content: center;
-    align-items: center;    
+    align-items: center;
     flex-wrap: wrap;
-    padding: 1rem;    
-     width: 100vw;  
-    text-align: center;   
-    left:230px;
-    flex:1 1 0%;
-    order:-1;
-    left:200px;
+    padding: 1rem;
+    width: 100vw;
+    text-align: center;
+    left: 230px;
+    flex: 1 1 0%;
+    order: -1;
+    left: 200px;
 }
 
 .productBox {
@@ -177,26 +171,29 @@ aside {
     height: 250px;
     opacity: 0.9;
 }
+
 .prodName {
-     position: absolute;
-     top: 8px;
-     right: 8px;
-     font-weight: bold;
-   }
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    font-weight: bold;
+}
+
 .productPic {
     position: absolute;
-    
     display: flex;
     height: 12em;
     object-fit: contain;
     top: 40px;
     left: 2px
 }
+
 .productPris {
     position: absolute;
     right: 50px;
     bottom: 80px;
 }
+
 .prodDescb {
     display: flex;
     position: absolute;
@@ -205,8 +202,9 @@ aside {
     word-wrap: break-word;
     text-align: justify;
     margin: 6px;
- }
-.SubScribe {        
+}
+
+.SubScribe {
     margin: 0;
     display: flex;
     justify-content: flex-start;
@@ -231,6 +229,7 @@ aside {
     left: 0px;
     width: 100%;
 }
+
 
 @media only screen and (max-width: 1050px) {
     .allProducts{
