--- a/CSS/startStyling.css
+++ b/CSS/startStyling.css
@@ -403,10 +403,16 @@ aside {
         background-color: cyan;
         position: absolute;
         right:  80px;
-        bottom: -35px;
+        bottom: 100px;
         margin: 4px 2px;
         padding: 1px 2px;
     }
 
-    
+    aside {
+        padding: 0;
+    }
+
+    main {
+        box-shadow: 100px 2px 200px 10px rgb(94, 96, 97) inset;
+    }
 }
